# ptacik

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  ptacik.sql  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  docker.yml  ruff.yml
ptacik-bot/: Dockerfile
ptacik-bot/src/: main.py
ptacik-bot/src/cogs/economy/: timely.py
ptacik-bot/src/cogs/events/: message.py
ptacik-bot/src/cogs/general/: profile.py
ptacik-bot/src/utils/: logger.py
src/: main.py
src/cogs/: general.py  manage.py
src/cogs/economy/: admin.py  balance.py  duel.py  give.py  timely.py  transactions.py
src/cogs/events/: message.py  shut_up.py  voice.py
src/cogs/fun/: daun.py
src/cogs/general/: profile.py  transactions.py
src/cogs/moderate/: manage.py
src/utils/: bot.py  config.py  database.py  logger.py  pydanticConfig.py
