[project]
name = "ptacik"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "colorama>=0.4.6",
    "discord>=2.3.2",
    "discord-py>=2.6.3",
    "dotenv>=0.9.9",
    "humanfriendly>=10.0",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ruff>=0.14.0",
]
